# confidential_workloads_in_nitro_enclaves

./: README.md
att_doc_retriever_sample/: Dockerfile  script.sh  tls_script.sh
att_doc_retriever_sample/py/: att_doc_retriever_sample.py  ca.crt  fake_cert.der  tester.py  tester2.py  tester_private.pem  tester_public.pem
att_doc_retriever_sample/rs/: Cargo.toml
att_doc_verifier/: Cargo.toml  response.txt
att_doc_verifier/src/: main.rs
enclave_remote_client_server/: server.py
enclave_runner/: Dockerfile  deployment.yaml  docker_send_code_to_enclave.sh  docker_starter.sh  docker_verifier_script.sh  evaluation_delete  evaluation_open  evaluation_read  evaluation_write  initializer_script.sh  send_code_to_enclave.sh  service.yaml  spawner_client.py  tester_enclave_runner  tester_enclave_runner_READONLY  verifier_script.sh
enclave_runner/att_doc_verifier/: Cargo.toml
enclave_runner/socket_tester/: Dockerfile  client.py  run.sh  server.py  socat_ec2_host.sh  socket_server.py  starter_script.sh  terminate_services.sh
evaluation/enclave_instance_tests/: enclave_build_test.sh  enclave_docker_image_build_cached_test.sh  enclave_docker_image_build_nocached_test.sh  enclave_run_time_test.sh  setup_build_test.sh
evaluation/native_enclave_tests/: attestation_verifier.sh  code_execution_local_test.sh  code_execution_test.sh
flask_tls_example/: Dockerfile  api_server_spawner.py  app.py  grpc_server.py  nginx_script.sh  test.txt
flask_tls_example/nginx/: nginx.conf
flask_tls_example/tests/: sender.py
syscall_interceptor/: client.py  server.py  socket_server.py
(+24 files in other folders)
